--- a/css/global.css
+++ b/css/global.css
@@ -1,17 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
-:root {
-  --cor-texto: #fff;
-  --cor-subtexto: #b2b2b2;
-  --cor-destaque: #ffbb00;
-}
-
-* {
-  font-family: Poppins, Arial, Helvetica, sans-serif;
+body {
   margin: 0;
   padding: 0;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
-.cor-destaque {
-  color: var(--cor-destaque);
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
