--- a/css/header.css
+++ b/css/header.css
@@ -1,53 +1,71 @@
-header {
-  background: #000000;
-  padding: 0 30px;
+.header-bg {
+  background-color: #000000;
 }
 
-header img {
-  display: block;
-  max-width: auto;
-  max-height: 32px;
-  padding: 20px 0;
-}
-
-header .header-container {
+.header {
   display: flex;
-  max-width: 1200px;
-
-  margin: 0 auto;
+  flex-wrap: wrap;
+  gap: 20px;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.menu-nav ul {
-  gap: 20px;
+.header-menu {
   display: flex;
-  list-style: none;
+  flex-wrap: wrap;
+  gap: 40px;
 }
 
-.menu-nav ul li a {
-  display: block;
-  text-decoration: none;
-  color: var(--cor-texto);
+.header-menu a {
+  color: #ffffff;
   font-size: 1.125rem;
+  display: inline-block;
+  padding: 16px 0px;
+  position: relative;
 }
 
-.menu-nav ul li a:hover {
-  text-decoration: underline;
+.header-menu a::after {
+  content: "";
+  display: block;
+  margin-top: 4px;
+  height: 2px;
+  width: 0%;
+  background: #ffffff;
+  transition: 0.3s;
+  position: absolute;
 }
 
-@media (max-width: 700px) {
-  header .header-container {
-    flex-direction: column;
-    justify-content: initial;
+.header-menu a:hover::after {
+  width: 100%;
+}
+
+@media (max-width: 800px) {
+  .header-menu {
     gap: 20px;
   }
-
-  header img {
-    padding: 10px 0;
+  .header-menu a {
+    background: #111111;
+    padding: 12px 16px;
+    border-radius: 4px;
   }
+  .header-menu a:hover {
+    background-color: #2e2e2e;
+  }
+  .header-menu a::after {
+    display: none;
+  }
+}
 
-  .menu-nav ul li a {
-    padding: 5px 0;
+@media (max-width: 600px) {
+  .header-menu {
+    gap: 12px;
+  }
+  .header-menu a {
+    padding: 8px 12px;
+    font-size: 0.875rem;
   }
 }
